services/web-service/k8s/dev/dottit-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dottit-ingress
  labels:
    name: dottit-ingress
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: api.dottit.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: gateway-service
                port:
                  number: 80
    - host: dottit.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web-service
                port:
                  number: 80
